--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Compiled class file
 *.class
+# Ignore Gradle project-specific cache directory
+.gradle
 
 # Log file
 *.log
@@ -21,3 +23,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+# Ignore Gradle build output directory
+build
+# Ignore Eclipse output directory
+bin
